fix header height on smaller screen

--- a/src/customStyles/homeStyle/custom.styles.css
+++ b/src/customStyles/homeStyle/custom.styles.css
@@ -76,10 +76,6 @@
     .headerTitle {
         margin-top: 3em;
     }
-    .headerContainer {
-        height: 1000px;
-        width: 100%;
-    }
     .ivory-logo{
         margin-left: -8em;
     }
